--- a/index.html
+++ b/index.html
@@ -6,13 +6,10 @@
     <title>Document</title>
 </head>
 <body>
-    <img style="width: 400px;height: 400px;" src="/Thekkady (1) - Copy.jpg" alt="">
-    <img style="width: 400px;height: 400px;" src="/Thekkady (1) - Copy.jpg" alt="">
-    <img style="width: 400px;height: 400px;" src="/Thekkady (1) - Copy.jpg" alt="">
-    <img style="width: 400px;height: 400px;" src="/Thekkady (1) - Copy.jpg" alt="">
-    <img style="width: 400px;height: 400px;" src="/Thekkady (1) - Copy.jpg" alt="">
-    <img style="width: 400px;height: 400px;" src="/Thekkady (1) - Copy.jpg" alt="">
-    <img style="width: 400px;height: 400px;" src="/Thekkady (1) - Copy.jpg" alt="">
-    <img style="width: 400px;height: 400px;" src="/Thekkady (1) - Copy.jpg" alt="">
+    
+
+
+
+    <script src="index.js"></script>
 </body>
 </html>
